# kierand.dev

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  package.json  vite.config.ts
content/: contact.md  footer.md  profiles.md  projects.md  tagline.md
server/: main.rs
src/: app.html
src/components/: Clock.svelte  Contact.svelte  Interests.svelte  LastFM.svelte  Link.svelte
src/lib/: cv.ts  lastfm.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/[...catchall]/: +page.ts
src/routes/api/cv/: +server.ts
src/routes/api/lastfm/: +server.ts
src/routes/api/lastfm/tags/: +server.ts
src/routes/cv/: +server.ts
src/routes/favicon.png/: +server.ts
src/styles/: font.scss  index.scss  link.scss  reset.scss
static/: app.css  app.js  robots.txt
static/.well-known/: discord
templates/: base.html  index.html
