[package]
name = "kierand-dev-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kierand-dev-rust"
path = "server/main.rs"

[dependencies]
axum = "0.8"
chrono = "0.4"
pulldown-cmark = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
